specify AN vs Perceptron

--- a/15-Neural-Networks/01_Intro_to_NN.ipynb
+++ b/15-Neural-Networks/01_Intro_to_NN.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## \"Neural\" Networks\n",
     "\n",
-    "![Wikipedia Neuron Diagram](http://www.ryanleeallred.com/wp-content/uploads/2019/03/Screen-Shot-2019-03-31-at-10.19.43-PM.png)\n",
+    "![Wikipedia Neuron Diagram](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Anatomy_of_a_Neuron_with_Synapse.png/1024px-Anatomy_of_a_Neuron_with_Synapse.png)\n",
     "\n",
     "Neural Networks aren't exactly a new technology, but recent breakthroughs have revitalized the area. For example the \"Perceptron\" -one of the basic building blocks of the technology- was invented in 1957. \n",
     "\n",
@@ -298,7 +298,8 @@
     },
     "colab_type": "code",
     "id": "CY6xiQ-BgxLR",
-    "outputId": "68de5027-fa5a-4555-e909-f1f5fda536a3"
+    "outputId": "68de5027-fa5a-4555-e909-f1f5fda536a3",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -324,7 +325,7 @@
     "\n",
     "![New Network with Bias](http://jalammar.github.io/images/NNs_bias.png)\n",
     "\n",
-    "Now I don't love this diagram because it shows our \"bias\" term as if it was a new horizontal layer, in reality the bias term interacts with a single layer to affect all layers after the hidden layer that it is associated with. This diagram will give you a better idea: \n",
+    "The above diagram is misleading because it shows our \"bias\" term as if it was a new horizontal layer. In reality the bias term interacts with a single layer to affect all layers after the hidden layer that it is associated with. This diagram will give you a better idea: \n",
     "\n",
     "![Bias Terms](https://i.stack.imgur.com/6S6Bz.png)\n"
    ]
@@ -579,7 +580,7 @@
     "\n",
     "![Equation](http://jalammar.github.io/images/NNs_formula_two_variables.png)\n",
     "\n",
-    "## I hope this looks extremely familiar.\n",
+    "## This should look extremely familiar\n",
     "\n",
     "Now we have a new network that takes in two inputs. But now instead of guessing at slope and coefficient values and evaluating them. How can we explore more combinations of weights and bias until we find the values that minimize our Mean-Squared Error?\n",
     "\n",
@@ -639,12 +640,14 @@
    },
    "source": [
     "# The Perceptron\n",
+    "The perceptron is simplest kind of neural network that we could talk about. A perceptron is just a single layer of **linear threshold units** or **artificial Neurons**.\n",
     "\n",
-    "The first and simplest kind of neural network that we could talk about is the perceptron. A perceptron is just a single node or neuron of a neural network with nothing else. It can take any number of inputs and spit out an output. What a neuron does is it takes each of the input values, multplies each of them by a weight, sums all of these products up, and then passes the sum through what is called an \"activation function\" the result of which is the final value.\n",
+    "The TLU can take any number of inputs and spit out an output. Each TLU receives each of the numerical inputs in addition to a **bias** term (typically 1). The TLU multiplies each input by a different **weight**, sums those products, and applies a **step/activation function**. Common step functions include:\n",
+    "* The **heaviside** function: 0 if sum < 0; 1 if sum >= 0\n",
+    "* The **sign** function: -1 if sum < 0; 0 if sum = 0; 1 if sum > 0\n",
     "\n",
-    "I really like figure 2.1 found in this [pdf](http://www.uta.fi/sis/tie/neuro/index/Neurocomputing2.pdf) even though it doesn't have bias term represented there.\n",
-    "\n",
-    "![Figure 2.1](http://www.ryanleeallred.com/wp-content/uploads/2019/04/Screen-Shot-2019-04-01-at-2.34.58-AM.png)\n",
+    "![Figure 2.1](img/artificial_neuron.PNG)\n",
+    "<center>Figure 2.1 found in <a href=\"http://www.uta.fi/sis/tie/neuro/index/Neurocomputing2.pdf\">this pdf</a>, although it doesn't have bias term represented</center>\n",
     "\n",
     "If we were to write what is happening in some verbose mathematical notation, it might look something like this:\n",
     "\n",
@@ -654,7 +657,7 @@
     "\n",
     "Understanding what happens with a single neuron is important because this is the same pattern that will take place for all of our networks. \n",
     "\n",
-    "When imagining a neural network I like to think about the arrows as representing the weights, like a wire that has a certain amount of resistance and only lets a certain amount of current through. And I like to think about the node itselef as containing the prescribed activation function that neuron will use to decide how much signal to pass onto the next layer."
+    "When imagining a neural network, we might think about the arrows as representing the weights, like a wire that has a certain amount of resistance and only lets a certain amount of current through. The node itself can be thought of as containing the prescribed activation function that neuron will use to decide how much signal to pass onto the next layer."
    ]
   },
   {
@@ -668,7 +671,7 @@
     "\n",
     "In Neural Networks, each node has an activation function. Each node in a given layer typically has the same activation function. These activation functions are the biggest piece of neural networks that have been inspired by actual biology. The activation function decides whether a cell \"fires\" or not. Sometimes it is said that the cell is \"activated\" or not. In Artificial Neural Networks activation functions decide how much signal to pass onto the next layer. This is why they are sometimes referred to as transfer functions because they determine how much signal is transferred to the next layer.\n",
     "\n",
-    "## Common Activation Functions:\n",
+    "<center>Common Activation Functions</center>\n",
     "\n",
     "![Activation Functions](http://www.snee.com/bobdc.blog/img/activationfunctions.png)"
    ]
@@ -680,7 +683,7 @@
     "id": "-9x3x5XgtD3i"
    },
    "source": [
-    "# Implementing a Perceptron from scratch in Python"
+    "# Implementing a LTU/AN from scratch in Python"
    ]
   },
   {
@@ -1000,7 +1003,7 @@
     "id": "sCeW6EVAu-jt"
    },
    "source": [
-    "# Perceptrons can classify linearly separable classes\n",
+    "# TLUs, ANs, and Perceptrons can classify linearly separable classes\n",
     "\n",
     "<https://www.bogotobogo.com/python/scikit-learn/Perceptron_Model_with_Iris_DataSet.php>"
    ]
@@ -1573,7 +1576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
