--- a/15-Neural-Networks/02_Backprop.ipynb
+++ b/15-Neural-Networks/02_Backprop.ipynb
@@ -36,21 +36,13 @@
     "\n",
     "Yesterday we talked about the capabilities and limitations of individual perceptrons.\n",
     "\n",
-    "- Perceptrons are like a single neuron in a neural network\n",
+    "- Perceptrons are like a single neuron or layer of neurons in a neural network\n",
     "- Perceptrons can only fit linear boundaries between classes\n",
     "\n",
-    "What is a Feedforward Neural Network? Well, it's a Neural Network made up of multiple perceptrons that has at least 1 hidden layer (does not include input and output layers). When we use the [Tensorflow Playground](https://playground.tensorflow.org) website to explore different neural network architectures, we're really just composing different architectures (topologies) of feedforward neural networks. However, when we give the network multiple hidden layers it should be designated as a \"deep\" feedforward neural network.\n",
-    "\n",
-    "### Perceptron\n",
-    "\n",
-    "<center><img src=\"http://www.ryanleeallred.com/wp-content/uploads/2019/04/Perceptron.png\" width=\"300\"></center>\n",
-    "\n",
-    "### Feedforward Neural Network\n",
-    "\n",
-    "<center><img src=\"http://www.ryanleeallred.com/wp-content/uploads/2019/04/Feedforward-NN.png\" width=\"300\"></center>\n",
+    "What is a Feedforward Neural Network? Well, it's a Neural Network made up of multiple perceptrons that has at least 1 hidden layer (a layerbetween the input and output layers). When we use the [Tensorflow Playground](https://playground.tensorflow.org) website to explore different neural network architectures, we're really just composing different architectures (topologies) of feedforward neural networks. However, when we give the network multiple hidden layers it should be designated as a \"deep\" feedforward neural network.\n",
     "\n",
     "### Deep Feedforward Neural Network\n",
-    "<center><img src=\"http://www.ryanleeallred.com/wp-content/uploads/2019/04/Deep-Feedforward-NN.png\" width=\"400\"></center>\n"
+    "<center><img src=\"https://upload.wikimedia.org/wikipedia/en/5/54/Feed_forward_neural_net.gif\" width=\"300\"></center>"
    ]
   },
   {
@@ -84,13 +76,16 @@
    "source": [
     "## What is an \"Epoch\"?\n",
     "\n",
-    "An \"Epoch\" is one cycle of passing our data forward through the network, measuring error given our specified cost function, and then -via gradient descent- updating weights within our network to hopefully improve the quality of our predictions on the next iteration.\n",
+    "An \"Epoch\" is one cycle of:\n",
+    "* passing our data forward through the network\n",
+    "* measuring error given our specified cost function\n",
+    "* updating weights within our network (via gradient descent) to hopefully improve the quality of our predictions on the next iteration\n",
     "\n",
     "### Batch vs Minibatch vs Stochastic Gradient Descent Epochs\n",
     "\n",
     "You may have heard these variations on the training process referenced in the 3Blue1Brown videos about backpropagation. \"Minibatch\" Gradient Descent means that instead of passing all of our data through the network for a given epoch (Batch GD), we just pass a randomized portion of our data through the network for each epoch. \n",
     "\n",
-    "Stochastic Gradient Descent is when we make updates to our weights after forward propagating each individual training observation.\n",
+    "**Stochastic Gradient Descent** is when we make updates to our weights after forward propagating each individual training observation.\n",
     "\n",
     "### Why might we use something like Minibatch GD? \n",
     "\n",
@@ -116,8 +111,7 @@
    "source": [
     "# Backpropagation\n",
     "\n",
-    "Backpropagation is short for [\"Backwards Propagation of errors\"](https://en.wikipedia.org/wiki/Backpropagation) and refers to a specific (rather calculus intensive) algorithm for how weights in a neural network are updated in reverse order at the end of each training epoch. Our purpose today is to demonstrate the backpropagation algorithm on a simple Feedforward Neural Network and in so doing help you get a grasp on the main process. If you want to understand all of the underlying calculus of how the gradients are calculated then you'll need to dive into it yourself, [3Blue1Brown's video is a great starting place](https://www.youtube.com/watch?v=tIeHLnjs5U8). I also highly recommend this Welch Labs series [Neural Networks Demystified](https://www.youtube.com/watch?v=bxe2T-V8XRs) if you want a rapid yet orderly walkthrough of the main intuitions and math behind the backpropagation algorithm. \n",
-    "\n"
+    "Backpropagation is short for [\"Backwards Propagation of errors\"](https://en.wikipedia.org/wiki/Backpropagation) and refers to a specific (rather calculus intensive) algorithm for how weights in a neural network are updated in reverse order at the end of each training epoch. Our purpose today is to demonstrate the backpropagation algorithm on a simple Feedforward Neural Network and in so doing help you get a grasp on the main process. If you want to understand all of the underlying calculus of how the gradients are calculated then you'll need to dive into it yourself, [3Blue1Brown's video is a great starting place](https://www.youtube.com/watch?v=tIeHLnjs5U8). Watch this Welch Labs series [Neural Networks Demystified](https://www.youtube.com/watch?v=bxe2T-V8XRs) if you want a rapid yet orderly walkthrough of the main intuitions and math behind the backpropagation algorithm. "
    ]
   },
   {
@@ -1298,7 +1292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
