--- a/15-Neural-Networks/05_Sprint_Challenge.ipynb
+++ b/15-Neural-Networks/05_Sprint_Challenge.ipynb
@@ -578,7 +578,8 @@
     "retults = pd.DataFrame({\n",
     "    'mean': grid_result.cv_results_['mean_test_score'], \n",
     "    'Stdev': grid_result.cv_results_['std_test_score'], \n",
-    "    'params': grid_result.cv_results_['params']})\n",
+    "    'params': grid_result.cv_results_['params']}\n",
+    ")\n",
     "\n",
     "retults.sort_values('mean', ascending=False)"
    ]
