--- a/15-Neural-Networks/03_Keras.ipynb
+++ b/15-Neural-Networks/03_Keras.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -56,21 +56,31 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\City_Year\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'1.13.1'"
+       "'2.2.4'"
       ]
      },
      "execution_count": 1,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import tensorflow\n",
-    "tensorflow.__version__"
+    "tensorflow.__version__\n",
+    "\n",
+    "import keras\n",
+    "keras.__version__"
    ]
   },
   {
@@ -2025,7 +2035,7 @@
     "colab_type": "code",
     "id": "GNzOLidxtvFa",
     "outputId": "4bbe16e6-af62-437a-fb85-567acc5f22f4",
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4653,7 +4663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
