--- a/15-Neural-Networks/04_Hyperparameter_Tuning.ipynb
+++ b/15-Neural-Networks/04_Hyperparameter_Tuning.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "41TS0Sa0rDNx"
-   },
+   "metadata": {},
    "source": [
-    "# Model Validation with Keras - Boston Housing Data"
+    "# Hyperparameter Tuning and Model Validation"
    ]
   },
   {
@@ -1497,8 +1494,8 @@
     "def baseline_model():\n",
     "    # create model\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(64, input_dim=inputs, activation='relu')) \n",
-    "    model.add(Dense(64, activation='relu')) \n",
+    "    model.add(Dense(64, input_dim=inputs, activation='relu'))\n",
+    "    model.add(Dense(64, activation='relu'))\n",
     "    model.add(Dense(1))\n",
     "    # Compile model\n",
     "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
@@ -2328,13 +2325,7 @@
       "512/512 [==============================] - 0s 88us/step - loss: 1.2176 - acc: 0.5957\n",
       "Epoch 20/20\n",
       "512/512 [==============================] - 0s 72us/step - loss: 1.1381 - acc: 0.6133\n",
-      "256/256 [==============================] - 0s 695us/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "256/256 [==============================] - 0s 695us/step\n",
       "512/512 [==============================] - 0s 53us/step\n",
       "Epoch 1/20\n",
       "512/512 [==============================] - 1s 1ms/step - loss: 5.8108 - acc: 0.5020\n",
@@ -2676,13 +2667,7 @@
       "512/512 [==============================] - 0s 49us/step - loss: 10.1820 - acc: 0.3613\n",
       "Epoch 20/20\n",
       "512/512 [==============================] - 0s 43us/step - loss: 10.1820 - acc: 0.3613\n",
-      "256/256 [==============================] - 0s 1ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "256/256 [==============================] - 0s 1ms/step\n",
       "512/512 [==============================] - 0s 23us/step\n",
       "Epoch 1/20\n",
       "512/512 [==============================] - 1s 2ms/step - loss: 10.5375 - acc: 0.3340\n",
@@ -3037,7 +3022,7 @@
    "source": [
     "## Epochs\n",
     "\n",
-    "The number of training epochs has a large and direct affect on the accuracy, However, more epochs is almost always goign to better than less epochs. This means that if you tune this parameter at the beginning and try and maintain the same value all throughout your training, you're going to be waiting a long time for each iteration of GridSearch. I suggest picking a fixed moderat # of epochs all throughout your training and then Grid Searching this parameter at the very end. "
+    "The number of training epochs has a large and direct affect on the accuracy. However, more epochs is almost always going to be better than less epochs. This means that if we tune this parameter at the beginning and try and maintain the same value all throughout our training, we're going to be waiting a long time for each iteration of GridSearch. We pick a fixed moderate # of epochs all throughout our training and then Grid Searching this parameter at the very end. "
    ]
   },
   {
@@ -4726,7 +4711,7 @@
     "\n",
     "the Dropout Regularization value is a percentage of neurons that you want to be randomly deactivated during training. The weight constraint is a second regularization parameter that works in tandem with dropout regularization. You should tune these two values at the same time. \n",
     "\n",
-    "Using dropout on visible vs hidden layers might have a different effect. Using dropout on hidden layers might not have any effect while using dropout on hidden layers might have a substantial effect. You don't necessarily need to turn use dropout unless you see that your model has overfitting and generalizability problems."
+    "Using dropout on visible vs hidden layers might have a different effect. Using dropout on hidden layers might not have any effect while using dropout on hidden layers might have a substantial effect. You don't necessarily need to use dropout unless you see that your model has overfitting and generalizability problems."
    ]
   },
   {
@@ -4816,7 +4801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
