--- a/14-Natural-Language-Processing/02_BOW_Lecture.ipynb
+++ b/14-Natural-Language-Processing/02_BOW_Lecture.ipynb
@@ -1371,6 +1371,8 @@
     "\n",
     "<center><img src=\"https://mungingdata.files.wordpress.com/2017/11/equation.png?w=430&h=336\" width=\"300\"></center>\n",
     "\n",
+    "[Wikipedia](https://en.wikipedia.org/wiki/Tf%E2%80%93idf)\n",
+    "\n",
     "**Term Frequency**: Percentage of words in document for each word\n",
     "\n",
     "**Document Frequency**: A penalty for the word existing in a high number of documents.\n",
