--- a/14-Natural-Language-Processing/03_Document_Classification.ipynb
+++ b/14-Natural-Language-Processing/03_Document_Classification.ipynb
@@ -851,10 +851,10 @@
     "\n",
     "def assess_model(model, X_train, X_test, \n",
     "                 y_train, y_test, vect_type='Count'):\n",
-    "    model.fit(X_train_vectorized, y_train)\n",
+    "    model.fit(X_train, y_train)\n",
     "\n",
-    "    train_predictions = model.predict(X_train_vectorized)\n",
-    "    test_predictions = model.predict(X_test_vectorized)\n",
+    "    train_predictions = model.predict(X_train)\n",
+    "    test_predictions = model.predict(X_test)\n",
     "\n",
     "    result = {}\n",
     "    result['model'] = str(model).split('(')[0]\n",
@@ -1493,7 +1493,8 @@
     },
     "colab_type": "code",
     "id": "_bhI1BPe0N0q",
-    "outputId": "dc834747-deb1-4fb1-ed24-783e0a114575"
+    "outputId": "dc834747-deb1-4fb1-ed24-783e0a114575",
+    "scrolled": true
    },
    "outputs": [
     {
