add CS material

--- a/15-Neural-Networks/04_Hyperparameter_Tuning.ipynb
+++ b/15-Neural-Networks/04_Hyperparameter_Tuning.ipynb
@@ -60,7 +60,8 @@
     },
     "colab_type": "code",
     "id": "cMMt4MtAsVx0",
-    "outputId": "35f18046-390d-4519-cef1-19e282d23352"
+    "outputId": "35f18046-390d-4519-cef1-19e282d23352",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -239,7 +240,7 @@
    "source": [
     "## Normalizing Input Data\n",
     "\n",
-    "It's not 100% necessary to normalize/scale your input data before feeding it to a neural network, the network can learn the appropriate weights to deal with data of as long as it is numerically represented,  but it is recommended as it can help **make training faster** and **reduces the chances that gradient descent might get stuck in a local optimum**.\n",
+    "It's not 100% necessary to normalize/scale your input data before feeding it to a neural network. The network can learn the appropriate weights to deal with data as long as it is numerically represented. However normalization is recommended as it can **make training faster** and **reduce the chance that gradient descent gets stuck in a local optimum**.\n",
     "\n",
     "<https://stackoverflow.com/questions/4674623/why-do-we-have-to-normalize-the-input-for-an-artificial-neural-network>"
    ]
@@ -4643,7 +4644,7 @@
    "source": [
     "## Optimizer\n",
     "\n",
-    "Remember that there's a different optimizers [optimizers](https://keras.io/optimizers/). At some point, take some time to read up on them a little bit. \"adam\" usually gives the best results. The thing to know about choosing an optimizer is that different optimizers have different hyperparameters like learning rate, momentum, etc. So based on the optimizer you choose you might also have to tune the learning rate and momentum of those optimizers after that. "
+    "Remember that there are different optimizers [optimizers](https://keras.io/optimizers/). At some point, take some time to read up on them a little bit. \"adam\" usually gives the best results. The thing to know about choosing an optimizer is that different optimizers have different hyperparameters like learning rate, momentum, etc. So based on the optimizer you choose you might also have to tune the learning rate and momentum of those optimizers after that. "
    ]
   },
   {
