--- a/16-Deep-Learning/01_RNN_and_LSTM.ipynb
+++ b/16-Deep-Learning/01_RNN_and_LSTM.ipynb
@@ -1529,6 +1529,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 975
+    },
+    "colab_type": "code",
+    "id": "Ti23G0gRe3kr",
+    "outputId": "bba9ae40-a286-49ed-d87b-b2946fb60ddf"
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "#Trains an LSTM model on the IMDB sentiment classification task.\n",
+    "The dataset is actually too small for LSTM to be of any advantage\n",
+    "compared to simpler, much faster methods such as TF-IDF + LogReg.\n",
+    "**Notes**\n",
+    "- RNNs are tricky. Choice of batch size is important,\n",
+    "choice of loss and optimizer is critical, etc.\n",
+    "Some configurations won't converge.\n",
+    "- LSTM loss decrease patterns during training can be quite different\n",
+    "from what you see with CNNs/MLPs/etc.\n",
+    "'''\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "from keras.preprocessing import sequence\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Embedding\n",
+    "from keras.layers import LSTM\n",
+    "from keras.datasets import imdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 975
+    },
+    "colab_type": "code",
+    "id": "Ti23G0gRe3kr",
+    "outputId": "bba9ae40-a286-49ed-d87b-b2946fb60ddf"
+   },
+   "outputs": [],
+   "source": [
+    "max_features = 20000\n",
+    "# cut texts after this number of words (among top max_features most common words)\n",
+    "maxlen = 80\n",
+    "batch_size = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 975
+    },
+    "colab_type": "code",
+    "id": "Ti23G0gRe3kr",
+    "outputId": "bba9ae40-a286-49ed-d87b-b2946fb60ddf"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data...\n",
+      "25000 train sequences\n",
+      "25000 test sequences\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Loading data...')\n",
+    "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=max_features)\n",
+    "print(len(x_train), 'train sequences')\n",
+    "print(len(x_test), 'test sequences')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 975
+    },
+    "colab_type": "code",
+    "id": "Ti23G0gRe3kr",
+    "outputId": "bba9ae40-a286-49ed-d87b-b2946fb60ddf"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pad sequences (samples x time)\n",
+      "x_train shape: (25000, 80)\n",
+      "x_test shape: (25000, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Pad sequences (samples x time)')\n",
+    "x_train = sequence.pad_sequences(x_train, maxlen=maxlen)\n",
+    "x_test = sequence.pad_sequences(x_test, maxlen=maxlen)\n",
+    "print('x_train shape:', x_train.shape)\n",
+    "print('x_test shape:', x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "colab": {
@@ -1608,41 +1743,6 @@
     }
    ],
    "source": [
-    "'''\n",
-    "#Trains an LSTM model on the IMDB sentiment classification task.\n",
-    "The dataset is actually too small for LSTM to be of any advantage\n",
-    "compared to simpler, much faster methods such as TF-IDF + LogReg.\n",
-    "**Notes**\n",
-    "- RNNs are tricky. Choice of batch size is important,\n",
-    "choice of loss and optimizer is critical, etc.\n",
-    "Some configurations won't converge.\n",
-    "- LSTM loss decrease patterns during training can be quite different\n",
-    "from what you see with CNNs/MLPs/etc.\n",
-    "'''\n",
-    "from __future__ import print_function\n",
-    "\n",
-    "from keras.preprocessing import sequence\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Embedding\n",
-    "from keras.layers import LSTM\n",
-    "from keras.datasets import imdb\n",
-    "\n",
-    "max_features = 20000\n",
-    "# cut texts after this number of words (among top max_features most common words)\n",
-    "maxlen = 80\n",
-    "batch_size = 32\n",
-    "\n",
-    "print('Loading data...')\n",
-    "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=max_features)\n",
-    "print(len(x_train), 'train sequences')\n",
-    "print(len(x_test), 'test sequences')\n",
-    "\n",
-    "print('Pad sequences (samples x time)')\n",
-    "x_train = sequence.pad_sequences(x_train, maxlen=maxlen)\n",
-    "x_test = sequence.pad_sequences(x_test, maxlen=maxlen)\n",
-    "print('x_train shape:', x_train.shape)\n",
-    "print('x_test shape:', x_test.shape)\n",
-    "\n",
     "print('Build model...')\n",
     "model = Sequential()\n",
     "model.add(Embedding(max_features, 128))\n",
@@ -2234,7 +2334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
