remove jupytext, rename, and add resources

--- a/07-Advanced-Regression/04_Ridge_Regression_and_Regularization.ipynb
+++ b/07-Advanced-Regression/04_Ridge_Regression_and_Regularization.ipynb
@@ -7,7 +7,7 @@
     "id": "-eFju4_DDKeX"
    },
    "source": [
-    "# Ridge Regression\n",
+    "# Ridge Regression and Regularization\n",
     "\n",
     "Regularize your way to a better tomorrow."
    ]
@@ -40,7 +40,9 @@
     "- [how to use regularization to prevent model overfitting](https://blogs.sas.com/content/subconsciousmusings/2017/07/06/how-to-use-regularization-to-prevent-model-overfitting/) - The SAS Data Science Blog\n",
     "- [introduction to regularization to reduce overfitting and improve generalization error](https://machinelearningmastery.com/introduction-to-regularization-to-reduce-overfitting-and-improve-generalization-error/) - machinelearningmastery\n",
     "- [ridge and lasso regression a complete guide with-python scikit-learn](https://towardsdatascience.com/ridge-and-lasso-regression-a-complete-guide-with-python-scikit-learn-e20e34bcbf0b) - towardsdatascience\n",
-    "- [Question about Standardizing in Ridge Regression](https://stats.stackexchange.com/questions/111017/question-about-standardizing-in-ridge-regression#111022) - stackexchange"
+    "- [Question about Standardizing in Ridge Regression](https://stats.stackexchange.com/questions/111017/question-about-standardizing-in-ridge-regression#111022) - stackexchange\n",
+    "- [StatQuest: Regularization Part 1: Ridge](https://www.youtube.com/watch?v=Q81RR3yKn30) - YouTube\n",
+    "- [StatQuest: Regularization Part 2: Lasso](https://www.youtube.com/watch?v=NGf0voTMlcs) - YouTube"
    ]
   },
   {
@@ -1624,9 +1626,6 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "formats": "ipynb,py:light"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1642,9 +1641,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
