--- a/04-Statistical-Tests-and-Experiments/01_Statistics_Probability_and_Inference.ipynb
+++ b/04-Statistical-Tests-and-Experiments/01_Statistics_Probability_and_Inference.ipynb
@@ -754,6 +754,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpretation\n",
+    "\n",
+    "In a two-tailed test, our threshold for statistical significance is `0.10`. With a **p value** of `0.022`, we can reject our null hypothesis that the population equally prefers Coke and Pepsi. In this case there was a clear preference for Coke (represented by 1 in our sample), although our test was not conducted to determine _which_ product is prefered - only to test whether _either one_ of the products is prefered over the other."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
