--- a/14-Natural-Language-Processing/03_Document_Classification.ipynb
+++ b/14-Natural-Language-Processing/03_Document_Classification.ipynb
@@ -12,10 +12,10 @@
     "What could we do with the document-term-matrices (dtm[s]) created in the previous notebook? We could visualize them or train an algorithm to do some specific task. We have covered both classification and clustering before, so we won't focus on the particulars of algorithms. Instead we'll focus on the unique problems of dealing with text input for these models.\n",
     "\n",
     "## Contents\n",
-    "* [Part 1](#p1): Vectorize a whole Corpus\n",
-    "* [Part 2](#p2): Tune the vectorizer\n",
-    "* [Part 3](#p3): Apply Vectorizer to Classification problem\n",
-    "* [Part 4](#p4): Introduce topic modeling on text data\n",
+    "* Part 1: Vectorize a whole Corpus\n",
+    "* Part 2: Tune the vectorizer\n",
+    "* Part 3: Apply Vectorizer to Classification problem\n",
+    "* Part 4: Introduce topic modeling on text data\n",
     "\n",
     "**Business Case**: Your managers at Smartphone Inc. have asked to develop a system to bucket text messages into two categories: **spam** and **not spam (ham)**. The system will be implemented on your companies products to help users identify suspicious texts."
    ]
@@ -862,7 +862,7 @@
     "    result['acc_test'] = accuracy_score(y_test, test_predictions)\n",
     "    result['vect_type'] = vect_type\n",
     "    print(result)\n",
-    "    \n",
+    "\n",
     "    return result"
    ]
   },
@@ -3434,7 +3434,7 @@
     "for review in df_nltk.text:\n",
     "    review = \" \".join(review)\n",
     "    documents.append(review)\n",
-    "  \n",
+    "\n",
     "sentiment = list(df_nltk.sentiment)\n",
     "new_df = pd.DataFrame({'text': documents, 'sentiment': sentiment})\n",
     "new_df.head()"
@@ -4182,7 +4182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
