--- a/05-Linear-Algebra/01_Linear_Algebra.ipynb
+++ b/05-Linear-Algebra/01_Linear_Algebra.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "<center><img alt=\"Le Comte de Belamy - GAN Art\" src=\"https://obvious-art.com/assets/img/comtedorures.jpg\" width=\"300\"></center>\n",
     "\n",
-    "<center>[Le Comte de Belamy](https://obvious-art.com/le-comte-de-belamy.htm)</center>\n",
+    "<center><a href=\"https://obvious-art.com/le-comte-de-belamy.htm\">Le Comte de Belamy</a></center>\n",
     "\n",
     "The set of instructions that we give to a computer to complete certain tasks is called an **algorithm**. The better that we can organize the set of instructions, the faster that computers can do them. The method that we use to organize and store our set of instructions so that the computer can do them super fast is called a **data structure**. The practice of optimizing the organization of our data structures so that they run really fast and efficiently is called **computer science**. (This is why we will have a unit dedicated solely to computer science in a few months). Data Scientists should care how fast computers can process their sets of instructions (algorithms)."
    ]
@@ -171,12 +171,12 @@
     "\n",
     "- Linear Regression: (You might remember from the intro course)\n",
     "\n",
-    "<center><img src=\"http://www.ryanleeallred.com/wp-content/uploads/2018/08/OLS-linear-algebra.png\" width=\"400\"></center>"
+    "<center><img src=\"https://jeffycyang.github.io/content/images/2015/11/Screen-Shot-2015-11-28-at-7-35-39-PM.png\" width=\"400\"></center>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -202,18 +202,30 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Read CSV\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/ryanleeallred/datasets/master/Ice_Cream_Sales.csv')\n",
+    "# ice cream sales data\n",
+    "df = pd.DataFrame(data=np.array([[3.2e+01, 2.0e+02, 1.0e+00],\n",
+    "                                 [3.5e+01, 4.0e+02, 1.0e+00],\n",
+    "                                 [4.7e+01, 5.0e+02, 1.0e+00],\n",
+    "                                 [5.5e+01, 6.0e+02, 1.0e+00],\n",
+    "                                 [7.3e+01, 1.1e+03, 1.0e+00],\n",
+    "                                 [7.8e+01, 1.2e+03, 1.0e+00],\n",
+    "                                 [8.1e+01, 1.5e+03, 1.0e+00],\n",
+    "                                 [8.6e+01, 1.7e+03, 1.0e+00],\n",
+    "                                 [8.9e+01, 1.8e+03, 1.0e+00],\n",
+    "                                 [9.0e+01, 1.6e+03, 1.0e+00],\n",
+    "                                 [1.1e+02, 2.0e+03, 1.0e+00]]), \n",
+    "                  columns=['Farenheit', 'Dollars', 'Ones'])\n",
     "\n",
     "# Create Column of 1s\n",
     "df['Ones'] = np.ones(11)\n",
     "\n",
     "# Format X and Y Matrices\n",
-    "X = df[['Ones', 'Farenheit']].as_matrix()\n",
-    "Y = df['Dollars'].as_matrix().reshape(-1, 1)\n",
+    "X = df[['Ones', 'Farenheit']].values\n",
+    "Y = df['Dollars'].values.reshape(-1, 1)\n",
     "\n",
     "# Calculate Beta Values\n",
-    "beta = np.matmul(np.linalg.inv(np.matmul(np.transpose(X), X)), np.matmul(np.transpose(X), Y))\n",
+    "beta = np.matmul(np.linalg.inv(np.matmul(np.transpose(X), X)), \n",
+    "                 np.matmul(np.transpose(X), Y))\n",
     "\n",
     "print(beta)"
    ]
@@ -515,26 +527,6 @@
     "sobel_y_image = nd.convolve(grayscale, sobel_y)\n",
     "plt.axis('off')\n",
     "plt.imshow(sobel_y_image);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "gc0fReyWSrXH"
-   },
-   "source": [
-    "## Are we going to learn to do Linear Algebra by hand?\n",
-    "\n",
-    "Let me quote your seventh grade maths teacher:\n",
-    "\n",
-    "<center><img src=\"http://www.ryanleeallred.com/wp-content/uploads/2018/12/carry-a-calculator-around.jpg\" width=\"400\"></center>\n",
-    "\n",
-    "Of course you're going to carry a calculator around everywhere, so mostly **NO**, we're not going to do a lot of hand calculating. We're going to try and refrain from calculating things by hand unless it is absolutely necessary in order to understand and implement the concepts.\n",
-    "\n",
-    "We're not trying to re-invent the wheel.\n",
-    "\n",
-    "We're learning how to  **use** the wheel. "
    ]
   },
   {
@@ -1357,7 +1349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
